--- a/P2_COMP472.ipynb
+++ b/P2_COMP472.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,45 @@
     "        correct_num+=(t==g)\n",
     "    # accuracy\n",
     "    acc=correct_num/len(true_labels)\n",
-    "    return acc\n"
+    "    return acc\n",
+    "\n",
+    "\n",
+    "#Input: text file, output: accuracy\n",
+    "def evaluateTxt(doc_file,params):\n",
+    "  \n",
+    "\n",
+    "    #Read the text \n",
+    "    all_docs, all_labels = read_documents(doc_file)\n",
+    "    \n",
+    "    #Classify \n",
+    "    guessed_labels = classify_documents(all_docs, params)\n",
+    "    \n",
+    "    #Get Accuracy\n",
+    "    overall_accuracy = accuracy(all_labels,guessed_labels)\n",
+    "    \n",
+    "    pos_correct,neg_correct=0,0 #the correctness from pos and neg\n",
+    "    pos_all,neg_all=0,0 #the overall records from pos and neg\n",
+    "\n",
+    "    for guess,true in zip(guessed_labels,eval_labels):\n",
+    "        if true=='pos':   \n",
+    "            pos_all+=1\n",
+    "            if guess=='pos':\n",
+    "                pos_correct+=1\n",
+    "        elif true=='neg':   \n",
+    "            neg_all+=1\n",
+    "            if guess=='neg':\n",
+    "                neg_correct+=1\n",
+    "\n",
+    "    pos_acc=pos_correct/pos_all\n",
+    "    neg_acc=neg_correct/neg_all\n",
+    "    df_table=pd.DataFrame([[pos_correct,pos_all,pos_acc],\n",
+    "                           [neg_correct,neg_all,neg_acc]],\n",
+    "                         columns=['Correct','All','Accuracy'],\n",
+    "                         index=['positive','negative'])\n",
+    "    df_table\n",
+    "    return df_table\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -176,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 84,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -422,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -476,14 +516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overall acc is  0.6953420058749475\n"
+      "Overall acc is  0.6949223667645824\n"
      ]
     }
    ],
@@ -496,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "metadata": {
     "scrolled": true
    },
@@ -530,9 +570,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>529</td>\n",
+       "      <td>528</td>\n",
        "      <td>1153</td>\n",
-       "      <td>0.458803</td>\n",
+       "      <td>0.457936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
@@ -546,11 +586,11 @@
       ],
       "text/plain": [
        "          Correct   All  Accuracy\n",
-       "positive      529  1153  0.458803\n",
+       "positive      528  1153  0.457936\n",
        "negative     1128  1230  0.917073"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,6 +625,85 @@
    "source": [
     "Based on the observation, pos' accuracy is much less than neg's. The reason could be the positve comments from the modle is less than expected, therefore, it disturbs the modle's judment."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# # Task 3: Evaluation from a text file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Correct</th>\n",
+       "      <th>All</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>positive</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>negative</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Correct  All  Accuracy\n",
+       "positive        1    3  0.333333\n",
+       "negative        1    3  0.333333"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Evaluating a text\n",
+    "params=(df_probablities,before_prob_dic)\n",
+    "evaluateTxt('some_sentiments_shuffled.txt',params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
