Fixed layout for task 3

--- a/P2_COMP472.ipynb
+++ b/P2_COMP472.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,9 +168,8 @@
     "\n",
     "\n",
     "#Input: text file, output: accuracy\n",
-    "def evaluateTxt(doc_file,params):\n",
+    "def evaluateNewText(doc_file,params):\n",
     "  \n",
-    "\n",
     "    #Read the text \n",
     "    all_docs, all_labels = read_documents(doc_file)\n",
     "    \n",
@@ -214,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -462,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -515,8 +514,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -528,6 +534,7 @@
     }
    ],
    "source": [
+    "\n",
     "# overall acc\n",
     "guessed_labels=classify_documents(eval_docs,params)\n",
     "overall_acc=accuracy(eval_labels,guessed_labels)\n",
@@ -536,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -590,7 +597,7 @@
        "negative     1128  1230  0.917073"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,12 +637,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# # Task 3: Evaluation from a text file"
+    "## Evaluating a new file for demo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -667,9 +674,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.333333</td>\n",
+       "      <td>0.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
@@ -683,19 +690,18 @@
       ],
       "text/plain": [
        "          Correct  All  Accuracy\n",
-       "positive        1    3  0.333333\n",
+       "positive        2    3  0.666667\n",
        "negative        1    3  0.333333"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Evaluating a text\n",
     "params=(df_probablities,before_prob_dic)\n",
-    "evaluateTxt('some_sentiments_shuffled.txt',params)"
+    "evaluateNewText('some_sentiments_shuffled.txt',params)"
    ]
   },
   {
