--- a/P2_COMP472.ipynb
+++ b/P2_COMP472.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,14 +471,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.001358386003932884 0.0005433109334758503\n"
+      "0.001358386003932884 0.0005433109334758503\n",
+      "Since pos_prob is lager than neg_prob, the label probability for word 'great' is pos \n"
      ]
     }
    ],
@@ -488,13 +489,16 @@
     "pos_prob=score_doc_label(very_short_doc,'pos',params)\n",
     "neg_prob=score_doc_label(very_short_doc,'neg',params)\n",
     "\n",
-    "print(pos_prob,neg_prob)"
+    "print(pos_prob,neg_prob)\n",
+    "print('Since pos_prob is lager than neg_prob, the label probability for word \\'great\\' is pos ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -511,6 +515,26 @@
     "neg_prob=score_doc_label(very_short_doc,'neg',params)\n",
     "\n",
     "print(pos_prob,neg_prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label for document consisting of the word 'great' is pos\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check the label guess\n",
+    "very_short_doc=['great']\n",
+    "label = classify_nb(very_short_doc, params)\n",
+    "print('Label for document consisting of the word \\'great\\' is '+label)"
    ]
   },
   {
