--- a/P2_COMP472.ipynb
+++ b/P2_COMP472.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
     "    pos_correct,neg_correct=0,0 #the correctness from pos and neg\n",
     "    pos_all,neg_all=0,0 #the overall records from pos and neg\n",
     "\n",
-    "    for guess,true in zip(guessed_labels,eval_labels):\n",
+    "    for guess,true in zip(guessed_labels,all_labels):\n",
     "        if true=='pos':   \n",
     "            pos_all+=1\n",
     "            if guess=='pos':\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -621,7 +621,7 @@
        "negative     1128  1230  0.917073"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -698,15 +698,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <td>27</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0.586957</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.333333</td>\n",
+       "      <td>42</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0.933333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -714,11 +714,11 @@
       ],
       "text/plain": [
        "          Correct  All  Accuracy\n",
-       "positive        2    3  0.666667\n",
-       "negative        1    3  0.333333"
+       "positive       27   46  0.586957\n",
+       "negative       42   45  0.933333"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
