--- a/P2_COMP472.ipynb
+++ b/P2_COMP472.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,6 @@
     "                         index=['positive','negative'])\n",
     "    df_table\n",
     "    return df_table\n",
-    "    \n",
     "    \n"
    ]
   },
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true
    },
@@ -461,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 91,
    "metadata": {
     "scrolled": true
    },
@@ -519,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 94,
    "metadata": {
     "scrolled": true
    },
@@ -621,7 +620,7 @@
        "negative     1128  1230  0.917073"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +717,7 @@
        "negative       42   45  0.933333"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,18 +728,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Task 4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'product', 'is', 'stupid']\n",
+      "Positive  3.505812395528106e-12 \n",
+      "Negative  1.6140220646536845e-11 \n",
+      "\n",
+      "['i', 'love', 'this', 'product']\n",
+      "Positive  1.6348178452742353e-10 \n",
+      "Negative  1.1275639353304533e-10 \n",
+      "\n",
+      "['i', 'love']\n",
+      "Positive  1.3184721811827007e-05 \n",
+      "Negative  6.576522812131928e-06 \n",
+      "\n",
+      "['love']\n",
+      "Positive  0.0006692173019126659 \n",
+      "Negative  0.0002935658227574181 \n",
+      "\n",
+      "['i', 'like']\n",
+      "Positive  2.4590605461067916e-05 \n",
+      "Negative  3.254308538573476e-05 \n",
+      "\n",
+      "['like']\n",
+      "Positive  0.0012481460643555585 \n",
+      "Negative  0.0014526730780442835 \n",
+      "\n",
+      "['this', 'cd', 'is', 'truly', 'a', 'classic', 'and', 'one', 'of', 'my', 'all-time', 'favorites', '.', 'love', 'it']\n",
+      "Positive  1.2361542536021291e-39 \n",
+      "Negative  4.144938009528049e-42 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_doc=['this','product','is','stupid']\n",
+    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
+    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
+    "print(some_doc)\n",
+    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
+    "\n",
+    "some_doc=['i','love','this','product']\n",
+    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
+    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
+    "print(some_doc)\n",
+    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
+    "\n",
+    "some_doc=['i','love']\n",
+    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
+    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
+    "print(some_doc)\n",
+    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
+    "\n",
+    "some_doc=['love']\n",
+    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
+    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
+    "print(some_doc)\n",
+    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
+    "\n",
+    "some_doc=['i','like']\n",
+    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
+    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
+    "print(some_doc)\n",
+    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
+    "\n",
+    "some_doc=['like']\n",
+    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
+    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
+    "print(some_doc)\n",
+    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
+    "\n",
+    "some_doc=['this', 'cd','is', 'truly', 'a', 'classic', 'and', 'one', 'of', 'my', 'all-time', 'favorites', '.', 'love', 'it' ]\n",
+    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
+    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
+    "print(some_doc)\n",
+    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These simple documents contain only few words, but their probabilities of being positive and negative are greatly affected by adding words that contain noise, such as the word \"I\", leading to misclassification. These should not affect the probabilities in either case."
+   ]
   }
  ],
  "metadata": {
