Added misclassified positive reviews and comment for task 4

--- a/P2_COMP472.ipynb
+++ b/P2_COMP472.ipynb
@@ -164,6 +164,7 @@
     "        correct_num+=(t==g)\n",
     "    # accuracy\n",
     "    acc=correct_num/len(true_labels)\n",
+    "    \n",
     "    return acc\n",
     "\n",
     "\n",
@@ -735,98 +736,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this task, we will use some sample documents and analyze them and locate which documents are misclassified.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['this', 'product', 'is', 'stupid']\n",
-      "Positive  3.505812395528106e-12 \n",
-      "Negative  1.6140220646536845e-11 \n",
-      "\n",
-      "['i', 'love', 'this', 'product']\n",
-      "Positive  1.6348178452742353e-10 \n",
-      "Negative  1.1275639353304533e-10 \n",
-      "\n",
-      "['i', 'love']\n",
-      "Positive  1.3184721811827007e-05 \n",
-      "Negative  6.576522812131928e-06 \n",
-      "\n",
-      "['love']\n",
-      "Positive  0.0006692173019126659 \n",
-      "Negative  0.0002935658227574181 \n",
-      "\n",
-      "['i', 'like']\n",
-      "Positive  2.4590605461067916e-05 \n",
-      "Negative  3.254308538573476e-05 \n",
-      "\n",
-      "['like']\n",
-      "Positive  0.0012481460643555585 \n",
-      "Negative  0.0014526730780442835 \n",
-      "\n",
-      "['this', 'cd', 'is', 'truly', 'a', 'classic', 'and', 'one', 'of', 'my', 'all-time', 'favorites', '.', 'love', 'it']\n",
-      "Positive  1.2361542536021291e-39 \n",
-      "Negative  4.144938009528049e-42 \n",
-      "\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Correct</th>\n",
+       "      <th>All</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>positive</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>negative</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Correct  All  Accuracy\n",
+       "positive        0    3       0.0\n",
+       "negative        2    2       1.0"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "some_doc=['this','product','is','stupid']\n",
-    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
-    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
-    "print(some_doc)\n",
-    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
-    "\n",
-    "some_doc=['i','love','this','product']\n",
-    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
-    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
-    "print(some_doc)\n",
-    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
-    "\n",
-    "some_doc=['i','love']\n",
-    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
-    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
-    "print(some_doc)\n",
-    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
-    "\n",
-    "some_doc=['love']\n",
-    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
-    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
-    "print(some_doc)\n",
-    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
-    "\n",
-    "some_doc=['i','like']\n",
-    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
-    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
-    "print(some_doc)\n",
-    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
-    "\n",
-    "some_doc=['like']\n",
-    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
-    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
-    "print(some_doc)\n",
-    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
-    "\n",
-    "some_doc=['this', 'cd','is', 'truly', 'a', 'classic', 'and', 'one', 'of', 'my', 'all-time', 'favorites', '.', 'love', 'it' ]\n",
-    "pos_prob=score_doc_label(some_doc,'pos',params)\n",
-    "neg_prob=score_doc_label(some_doc,'neg',params)\n",
-    "print(some_doc)\n",
-    "print(\"Positive \",pos_prob,\"\\nNegative \",neg_prob,\"\\n\")\n",
-    "\n",
-    "\n",
-    "\n"
+    "evaluateNewText('task4.txt',params)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These simple documents contain only few words, but their probabilities of being positive and negative are greatly affected by adding words that contain noise, such as the word \"I\", leading to misclassification. These should not affect the probabilities in either case."
+    "Here, there are three positive reviews that got misclassified. \n",
+    "\n",
+    "health pos 187.txt shaving cream in a tube is just about impossible to buy at retail outlets . this is a great product and i will continue to buy it through amazon \n",
+    "\n",
+    "camera pos 907.txt this camera is easy to use and makes a good quality recording . since it is an upper end product , it does have a longer learning curve than more simple models but the effort is worth it for the added features . there are , however , a few quirks which could have been fixed to make this a much more usable piece of equipment . the provided microphone jack is an 1 / 8 \" stereo . in my camera , at least , it is not mounted very securely . when i have an external mike connected , i had to be very careful to make sure that nothing touched it , otherwise , the sound would drop off . a friend with some tools and expertise fixed this problem but it should never have happened . the master switch moves from off to vcr mode ( up one ) , record to tape mode ( down one ) or record to stick mode ( down two ) . it is intuitive but very easy to overshoot the mark . this can be frustrating and i cannot help but believe there is a better design that could be used . the \" vcr \" controls are located on the top surface of the camera . they are intuitive and employ commonly used symbols . they are also backlit and impossible to discern in sunshine . you can see the symbols but there is no way to tell which , if any , of the functions are selected . it is still usable but it is a pain in the backside . there are a multitude of things that could be done to make the interface on this camera easier to use but it is usable as it is now .\n",
+    "\n",
+    "health pos 639.txt i love these little bibs . i say little , because even though they are the size of regular cloth bibs , the big size bibsters , which i also bought , are huge , and cover my 9mo . old baby to almost past his diapers . i was reluctant to buy bibsters at first , because they seemed such a waste of material being disposable - and i guess they are- - however , they serve a good purpose in that they are extremely light and thin and fully waterproof , so that my super-drooler does n't get his outfits totally wet like he does with his cloth bibs , which i 'm frequently switching out . bibsters are also very easy to pack into the diaper bag , and i 'm never without a bib . i 've also been using the big size bibsters on my 2yr old in the car , for random snack spills . these are not really reusable , but i sometimes do use them for 2 meals , depending on how clean they are . the price was right when amazon grocery had the spend 50 get 10 dea \n",
+    "\n",
+    "The reason why these documents were difficult to classify is most likely due to the presence of noise.\n",
+    "The last two of these reviews have one thing in common: they are very long. The longer the review is, the more noise is present in the text, and the more likely that it will find words found in negative reviews, therefore it is more difficult to classify. There was already noise present in the input datasets for the model, which tampered with accuracy. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
